--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "davejamesmiller/laravel-breadcrumbs": "5.x",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
+        "laravel/passport": "^7.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "spatie/laravel-permission": "^2.37",
